2009-01-19  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Tim Hatcher

        Fix long standing typo.

        * History/WebBackForwardList.h:

2009-01-19  Mark Rowe  <mrowe@apple.com>

        Fix the build!

        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::demarshalValue):
        (WebKit::NetscapePluginInstanceProxy::demarshalValues):

2009-01-18  Mark Rowe  <mrowe@apple.com>

        Reviewed by Anders Carlsson.

        Fix <https://bugs.webkit.org/show_bug.cgi?id=23414>.
        Bug 23414: Reproducible crash accessing View menu with plugins disabled

        * WebView/WebFrame.mm:
        (-[WebFrame _canProvideDocumentSource]): Null-check the PluginData before using it.

2009-01-17  David Hyatt  <hyatt@apple.com>

        Eliminate dependencies on "backslashAsCurrencySymbol()" from WebKit, and make sure these alterations
        are done in WebCore instead.

        Reviewed by Oliver Hunt

        * WebView/WebFrame.mm:
        (-[WebFrame _selectedString]):
        (-[WebFrame _stringForRange:]):

2009-01-17  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adele Peterson

        Complete <rdar://problem/6293969>

        * WebCoreSupport/WebSystemInterface.m:
        (InitWebCoreSystemInterface): Remove UseSharedMediaUI

2009-01-15  Brady Eidson  <beidson@apple.com>

        Reviewed by Dan Bernstein

        Fix problem where a URL visited as non-GET once is flagged as non-GET forever.

        * History/WebHistory.mm:
        (-[WebHistory _visitedURL:withTitle:method:wasFailure:]): Always update the HTTPNonGet
          flag for all loads with an HTTP Method

2009-01-14  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Implement InvokeDefault, Construct, GetProperty and SetProperty.
        
        Fully implement marshalValue.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCInvokeDefault):
        (WKPCConstruct):