@@ -74,14 +74,10 @@ routine ReleaseObject(clientPort :mach_port_t;
                       pluginID :uint32_t;
                       objectID :uint32_t);
                       
-// FIXME: This should be a simpleroutine with an EvaluateReply that has
-// the out parameters.
-routine Evaluate(clientPort :mach_port_t;
-                 pluginID :uint32_t;
-                 objectID :uint32_t;
-                 script :data_t;
-                 out returnValue :boolean_t;
-                 out result :data_t, dealloc);
+simpleroutine Evaluate(clientPort :mach_port_t;
+                       pluginID :uint32_t;
+                       objectID :uint32_t;
+                       script :data_t);
 
 routine Invoke(clientPort :mach_port_t;
                pluginID :uint32_t;
